--- a/app/src/main/res/anim/fade_out_in.xml
+++ b/app/src/main/res/anim/fade_out_in.xml
@@ -2,18 +2,23 @@
 
 <set
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:shareInterpolator="false"
+	android:shareInterpolator="true"
 	android:fillAfter="true">
 
 	<alpha
-		android:fromAlpha="0.0"
-		android:toAlpha="1.0"
-		android:duration="0"/>
-
-	<alpha
-		android:fromAlpha="1.0"
+		android:fromAlpha="3.0"
 		android:toAlpha="0.0"
-		android:duration="4500"
-		android:startOffset="3500"/>
+		android:duration="4000" />
+	<scale
+		android:duration="750"
+		android:pivotX="50%"
+		android:pivotY="50%"
+		android:fromXScale="1.0"
+		android:fromYScale="1.0"
+		android:toXScale="0"
+		android:toYScale="0"
+		android:startOffset="2000"/>
+
+
 
 	</set>
