--- a/app/src/main/res/layout/activity_key_archive.xml
+++ b/app/src/main/res/layout/activity_key_archive.xml
@@ -8,25 +8,30 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cms341.message_encryptor.KeyArchive">
+    tools:context="cms341.message_encryptor.KeyArchive"
+    android:background="@color/common_google_signin_btn_text_light_focused">
 
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:textColor="#00FF00" >
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:textColor="#00FF00" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:textColor="#00FF00" >
         <ListView
             android:id="@+id/keys"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:textColor="#00FF00" >
 
 
         </ListView>
