--- a/app/src/main/res/layout/password_popup.xml
+++ b/app/src/main/res/layout/password_popup.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_centerVertical="true"
-    android:padding="15dp">
+    android:padding="15dp"
+    android:background="@color/common_google_signin_btn_text_light_focused">
     <TextView
         android:id="@+id/pass_prompt"
         android:layout_width="match_parent"
@@ -11,12 +12,14 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:text="@string/pass_prompt"
+        android:textColor="#00FF00"
         android:textAlignment="center"/>
     <EditText
         android:id="@+id/password"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="#00FF00"
         android:inputType="textPassword"/>
 
 </LinearLayout>
