--- a/app/src/main/res/layout/key_generator.xml
+++ b/app/src/main/res/layout/key_generator.xml
@@ -5,7 +5,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cms341.message_encryptor.KeyGenerator"
     android:background="@color/common_google_signin_btn_text_light_focused">
@@ -16,8 +15,7 @@
         android:text="@string/record"
         android:id="@+id/record"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"/>
-
+        android:layout_marginTop="37dp"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="11dp"
         android:backgroundTint="#696969"
