--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,4 +9,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item android:id="@+id/action_email"
+        android:icon="@android:drawable/ic_dialog_email"
+        android:title="@string/action_email"
+        android:orderInCategory="200"
+        app:showAsAction="always"/>
+
 </menu>
