--- a/app/src/main/res/layout/key_generator.xml
+++ b/app/src/main/res/layout/key_generator.xml
@@ -11,7 +11,7 @@
 
     <EditText
         android:id="@+id/key_generator"
-        android:text="@string/enter"
+        android:hint="@string/enter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
