--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,14 +8,26 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/common_google_signin_btn_text_light_focused">
     tools:context="cms341.message_encryptor.splashScreen">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="40sp"
-        android:text="App-Cryptor"
+        android:text="Message-Encryptor"
         android:textAlignment="center"
+        android:layout_marginBottom="100dp"
+        android:textColor="#00FF00"
+        android:gravity="center"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="20sp"
+        android:text="Michael Nick Chakib"
+        android:layout_marginTop="200dp"
+        android:textColor="#c0c0c0"
         android:gravity="center"/>
 
 </FrameLayout>
