--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -30,4 +30,9 @@
         android:textColor="#c0c0c0"
         android:gravity="center"/>
 
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/picture" />
+
 </FrameLayout>
